# automail

./: .gitignore  Cargo.toml
src/: config.rs  cursive_style.toml  email.rs  index.html  main.js  main.rs  relays.rs  settings.html  styles.css  ui.rs
src-tauri/: .gitignore  Cargo.toml  config.toml  tauri.conf.json
src-tauri/src/: email.rs  main.rs  storage.rs
